--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node /src/index.js",
+    "start": "node src/index.js",
    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "4.13.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
